finalizacao pagina index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div><a href="index.html">Home</a></div>
             <div><a href="">Sobre</a></div>
             <div><a href="">Contato</a></div>
-            <div><a href="saibamais.html">Saiba mais!</a></div>
+            <div><a href="saibamais.html">Saiba mais</a></div>
         </div>
         <div id="oquee">
             <h2>Entenda o que é COVID 19</h2>
@@ -76,6 +76,7 @@
             
         <div class="column">
             <ul>
+                <br>
                 <li>Lave as mãos com água e sabão ou higienizador à base de álcool, para matar vírus que podem estar nas suas mãos.</li>
 
                 <li>Mantenha pelo menos 1 metro de distância entre você e qualquer pessoa que esteja tossindo ou espirrando. Quando alguém tosse ou espirra, pulveriza pequenas gotas líquidas do nariz ou da boca, que podem conter vírus. Se você estiver muito próximo, poderá inspirar as gotículas – inclusive do vírus da COVID-19 se a pessoa que tossir tiver a doença.</li>
@@ -93,7 +94,7 @@
         </div>
 
         <div id="lavar">
-            <h3>Clique na imagem para expandir a mesma em outra guia!</h3>
+            <h3>Clique na imagem para expandir!</h3>
             <a href="img/alcool.jpg" target="_blank"><img src="img/alcool.jpg" width="100%"/></a>
         </div>
 
