Pagina de contato

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         
         <div id="menu">
             <div><a href="index.html">Home</a></div>
-            <div><a href="">Sobre</a></div>
-            <div><a href="">Contato</a></div>
+            <div><a href="sobre.html">Sobre</a></div>
+            <div><a href="contato.html">Contato</a></div>
             <div><a href="saibamais.html">Saiba mais</a></div>
         </div>
         <div id="oquee">
