inicio do projeto

--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,14 @@
         </div>
 
         <div align="center">
-            <img src="img/felipe.JPG" width="33%">
+            <img src="img/felipe.JPG" width="30%">
+        </div>
+
+        <div id="menu">
+            <div><a href="index.html">Home</a></div>
+            <div><a href="sobre.html">Sobre</a></div>
+            <div><a href="contato.html">Contato</a></div>
+            <div><a href="saibamais.html">Saiba mais</a></div>
         </div>
 
         <div id="resumo">
