finalizacao pagina contato

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
         <div align="center">
-            <img  id="figtitle" src="img/title.png"/>
+            <img src="img/title.png"/>
         </div>
         <div>
             <h1>Informações importantes para você se proteger do COVID 19</h1>
