finalzacao pagina saiba mais

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>COVID 19: Tudo o que você precisa saber!</title>
         <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
     </head>
 
     <body>
