--- a/saibamais.html
+++ b/saibamais.html
@@ -1,1 +1,81 @@
-<a href="https://coronavirus.saude.gov.br/sobre-a-doenca#o-que-e-covid">Site do Ministério da Saúde Brasileiro sobre o COVID-19</a>
+<html>
+    <head>
+        <title>COVID 19: Tudo o que você precisa saber!</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/a91c90836e.js" crossorigin="anonymous"></script>
+        <meta charset="utf-8">
+    </head>
+
+    <body>        
+        <div align="center" id="atendimento">
+            <img src="img//saber.png"/>
+        </div>
+        <div>
+            <h1>Consulte nossa área de curadoria!</h1>
+            <p align="center">Todos os materiais mencionados foram consultados no dia 19/04/2020</p>
+        </div>
+        <div id="menu">
+            <div><a href="index.html">Home</a></div>
+            <div><a href="sobre.html">Sobre</a></div>
+            <div><a href="contato.html">Contato</a></div>
+            <div><a href="saibamais.html">Saiba mais</a></div>
+        </div>
+
+        <div>
+            <h2>Consulte os links abaixo para ter informações complementares!</h2>
+        </div>
+        <div id="curadoria" align="center">
+            
+            <table>
+                <tr>
+                    <td align="center"><h3>Sites / Textos</h3></td>
+                </tr>
+            <tr>
+                <td align="center">
+                    <p>Site do Ministério da Saúde Brasileiro sobre o COVID-19</p>
+                    <a href="https://coronavirus.saude.gov.br/sobre-a-doenca#o-que-e-covid">Link</a>
+                </td>
+
+                <td align="center">
+                    <p>Site da Organização Panamericana da Saúde</p>
+                    <a href="https://www.paho.org/bra/index.php?option=com_content&view=article&id=6101:covid19&Itemid=875">Link</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td align="center"><h3>Vídeos</h3></td>
+            </tr>
+
+            <tr>
+                <td align="center">
+                    <p>Canal Youtube: TV Ensino com Professor Delfim</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-6_uKPvk8L8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </td>
+
+                <td align="center">
+                    <p>Canal Giramille</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/90ydmVKmzOw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </td>
+
+            </tr>
+
+            <tr>
+                <td align="center"><h3>Podcasts</h3></td>
+            </tr>
+
+            <tr>
+                <td align="center">
+                    <p>FioCruz - Podcast Viralizados - Covid-19</p>
+                    <a href="https://youtu.be/JQNaJURjvsw">Link</a>
+                </td>
+
+                <td align="center">
+                    <p>Podcast do Canal Correio do Povo</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/sS5M32IjYjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </td>
+
+            </tr>
+
+        </table>
+        </div>
+    </body>
