--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,7 @@
     <head>
         <title>Conheça um pouco mais sobre o autor desta página!</title>
         <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
     </head>
 
     <body>
