--- a/contato.html
+++ b/contato.html
@@ -3,6 +3,7 @@
         <title>COVID 19: Tudo o que você precisa saber!</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/a91c90836e.js" crossorigin="anonymous"></script>
+        <meta charset="utf-8">
     </head>
 
     <body>        
