--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <img src="img/title.png"/>
         </div>
         <div>
-            <h1>Informações importantes para você se proteger do COVID 19</h1>
+            <h1>Informações importantes para você se proteger do COVID 19 com maior eficácia!</h1>
         </div>
         
         <div id="menu">
